Completed styling of dealer page, no functionality

--- a/src/app/company/company-dealers/company-dealers.component.html
+++ b/src/app/company/company-dealers/company-dealers.component.html
@@ -1,3 +1,144 @@
-<p>
-  company-dealers works!
-</p>
+<div id="content">
+  <div id="main">
+    <div class="container">
+      <h1 class="title-has-line">Dealers</h1>
+      <div class="three_fourth">
+			  <p>Find Never Summer dealers in your area using this search form.</p>
+				<p><a href="#">Click here for a list of international dealers.</a></p>
+			</div>
+
+      <div class="one_fourth last">
+
+						<!--<form name="catcustomcontentform6110" method="post" onsubmit="return checkWholeForm6110(this)" action="/Default.aspx?CCID=38147&FID=188185&ExcludeBoolFalse=True&ID=/company/dealer-search-results">-->
+
+							<div id="shop-filters">
+
+								<input type="text" name="Postcode_38147" id="Postcode_38147" placeholder="ZIP Code" />
+
+								<input type="hidden" id="Country_38147" name="Country_38147" value="US" />
+
+
+                <div class="selectricWrapper orderby monospace">
+              
+                  <div class="selectric">
+                    <p class="label">Within 5 miles</p>
+                    <b class="button">▾</b>
+                  </div>
+
+                  <div class="selectricItems" tabindex="-1" style="width: 207px; top: -241px;">
+                    <ul>
+                      <li class="selected">Within 5 miles</li>
+                      <li>Within 10 miles</li>
+                      <li>Within 20 miles</li>
+                      <li>Within 50 miles</li>
+                      <li class="last">Within 100 miles</li>
+                    </ul>
+                  </div>
+                  <input type="text" class="selectricInput">
+                </div>
+
+
+                <div class="selectricWrapper orderby monospace">
+                  <div class="selectricHideSelect">
+                        <select name="CAT_Custom_4" id="CAT_Custom_4" class="orderby monospace">
+                        <option value="*">Any State</option>
+                        <option value="AL">AL</option>
+                        <option value="AK">AK</option>
+                        <option value="AR">AR</option>
+                        <option value="AZ">AZ</option>
+                        <option value="CA">CA</option>
+                        <option value="CO">CO</option>
+                        <option value="CT">CT</option>
+                        <option value="DE">DE</option>
+                        <option value="DC">DC</option>
+                        <option value="FL">FL</option>
+                        <option value="GA">GA</option>
+                        <option value="HI">HI</option>
+                        <option value="ID">ID</option>
+                        <option value="IL">IL</option>
+                        <option value="IN">IN</option>
+                        <option value="IA">IA</option>
+                        <option value="KS">KS</option>
+                        <option value="KY">KY</option>
+                        <option value="LA">LA</option>
+                        <option value="ME">ME</option>
+                        <option value="MD">MD</option>
+                        <option value="MA">MA</option>
+                        <option value="MI">MI</option>
+                        <option value="MN">MN</option>
+                        <option value="MS">MS</option>
+                        <option value="MO">MO</option>
+                        <option value="MT">MT</option>
+                        <option value="NE">NE</option>
+                        <option value="NV">NV</option>
+                        <option value="NH">NH</option>
+                        <option value="NJ">NJ</option>
+                        <option value="NM">NM</option>
+                        <option value="NY">NY</option>
+                        <option value="NC">NC</option>
+                        <option value="ND">ND</option>
+                        <option value="OH">OH</option>
+                        <option value="OK">OK</option>
+                        <option value="OR">OR</option>
+                        <option value="PA">PA</option>
+                        <option value="RI">RI</option>
+                        <option value="SC">SC</option>
+                        <option value="SD">SD</option>
+                        <option value="TN">TN</option>
+                        <option value="TX">TX</option>
+                        <option value="UT">UT</option>
+                        <option value="VT">VT</option>
+                        <option value="VA">VA</option>
+                        <option value="WA">WA</option>
+                        <option value="WV">WV</option>
+                        <option value="WI">WI</option>
+                        <option value="WY">WY</option>
+                    </select>
+                  </div>
+                  <div class="selectric">
+                    <p class="label">Any State</p>
+                    <b class="button">▾</b>
+                  </div>
+                  <div class="selectricItems"></div>
+                </div>
+
+                <div class="selectricWrapper orderby monospace">
+                  <div class="selectricHideSelect">
+                    <select name="CAT_Category" id="CAT_Category" class="orderby monospace">
+                      <option value="-1" selected="selected">Any</option>
+                      <option value="178756">Snowboard</option>
+                      <option value="178757">Longboards</option>
+                    </select>
+                  </div>
+                  <div class="selectricItems" tabindex="-1">
+                    <ul>
+                      <li class="selected">Any</li>
+                      <li>Snowboard</li>
+                      <li class="last">Longboard</li>
+                    </ul>
+                  </div>
+                </div>
+
+								<input class="send_message" type="submit" value="Search" />
+
+							</div>
+
+						<!--<script type="text/javascript" src="../CatalystScripts/ValidationFunctions-vs=b1563.r450685-phase1.js"></script>
+						<script type="text/javascript">
+							function checkWholeForm6110(theForm) {
+								var why = "";
+								if (why != "") {
+									alert(why);
+									return false;
+								}
+								return true;
+							}
+						</script>-->
+
+					</div>
+
+
+
+    </div>
+  </div>
+</div>
