Added international dealer compo, added routes, completed company/international-dealer view

--- a/src/app/company/company-dealers/company-dealers.component.html
+++ b/src/app/company/company-dealers/company-dealers.component.html
@@ -4,7 +4,7 @@
       <h1 class="title-has-line">Dealers</h1>
       <div class="three_fourth">
 			  <p>Find Never Summer dealers in your area using this search form.</p>
-				<p><a href="#">Click here for a list of international dealers.</a></p>
+        <a [routerLink]="['company/international-dealers']">Click here for a list of international dealers.</a>
 			</div>
 
       <div class="one_fourth last">
