--- a/src/app/header.component.html
+++ b/src/app/header.component.html
@@ -35,7 +35,8 @@
                 <li><a [routerLink]="['company/calendar']">Calendar</a></li>
                 <li><a [routerLink]="['company']">Company</a>
                     <ul>
-                        <li><a [routerLink]="['company/dealers']">Dealers</a></li>
+                        <li><a [routerLink]="['company/dealers']">Dealers - US</a></li>
+                        <li><a [routerLink]="['company/international-dealers']">Dealers - Global</a></li>
                         <li><a [routerLink]="['company/warranty']">Warranty / Ticket to Shred Registration</a></li>
                         <li><a [routerLink]="['company/news']">News Feed</a></li>
                         <li><a [routerLink]="['company']">About Us</a> </li>
