Completed Company/calendar view

--- a/src/app/company/company-dealers/company-dealers.component.scss
+++ b/src/app/company/company-dealers/company-dealers.component.scss
@@ -240,3 +240,146 @@ input[type="submit"] {
 input[type="submit"]:hover {
     background-color:#000;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*--------------------------------------------------
+	12. Dealers Pages
+---------------------------------------------------*/	
+
+#webapp_map_38147 { 
+    width:100% !important;
+    border:1px solid #ccc;
+}
+
+	
+	#contact-formular {
+		width:800px;
+		margin:0 auto;
+	}
+	
+	input.cat_textbox, textarea.cat_listbox, select.cat_dropdown, select.cat_listbox {
+		width: 100% !important;
+		max-width: 100%;
+		text-align: left;	
+	}
+	
+	#catCartDetails select, input[type="text"], textarea, input[type="email"], input[type="password"], textarea {
+		color: #000;
+		font-family: 'Titillium Web' ;
+		font-size: 14px;
+		letter-spacing:1px;
+		height: 50px;
+		padding: 10px 25px;
+		width: 100%;
+		background:#f5f5f5;
+		border-radius:0px;
+		margin-bottom:30px;
+		border:0;
+		transition: all 0.2s linear;
+		-moz-transition: all 0.2s linear;
+		-webkit-transition: all 0.2s linear;
+		-o-transition: all 0.2s linear;
+		box-sizing: border-box;
+	}
+	
+	
+::-webkit-input-placeholder {
+    color: #000;
+    opacity: 1;
+}
+	
+	input[type=text]:focus, textarea:focus, input[type=email]:focus {
+		background-color: #e1e1e1;
+	}
+	
+	#contact-formular textarea {
+		height:160px;
+		resize:none;
+		padding: 20px 25px;
+	}
+	
+	input[type="submit"]	{
+		color:#fff;
+		font-family: 'Titillium Web', sans-serif;
+		font-size: 14px;
+		text-transform:uppercase;
+		padding:15px 40px;
+		letter-spacing:0;
+		line-height:20px;
+		cursor:pointer;
+		border:none;
+		transition:all 0.3s ease 0s;
+		-moz-transition:all 0.3s ease 0s;
+    	-webkit-transition:all 0.3s ease 0s;
+    	-o-transition:all 0.3s ease 0s;
+		text-align:center;
+		letter-spacing:1px;
+		background-color:#e11f26;
+	}
+	
+	input[type="submit"]:hover {
+		background-color:#000;
+	}
+	
+	.error_message {		
+		text-align:center;		
+		margin-bottom:30px;
+		font-size:13px;		
+		color:#e93735;		
+		font-weight:bold;		
+	}
+	
+	#success_page {		
+		text-align:center;		
+	}	
+	
+	#success_page p {		
+		color:#999999;		
+		margin-top:20px;		
+	}
+	
+	#message fieldset {		
+		border:none;		
+	}
+	
+	#contact-info {
+		max-height:500px;
+		opacity:1;
+		margin: 0;
+		width: 800px;
+		left:50%;
+		margin-left:-400px;
+		float:left;
+		position:relative;
+		z-index:0;		
+		-webkit-transition: all 0.3s ease-in-out;
+		-moz-transition: all 0.3s ease-in-out;
+		-o-transition: all 0.3s ease-in-out;
+		-ms-transition: all 0.3s ease-in-out;
+		transition: all 0.3s ease-in-out;	
+	}
+	
+	#contact-info.contact-hide {
+		max-height:0px;
+		opacity:0;
+		z-index:-1;		
+	}
+	
+	
+	
