--- a/src/app/header.component.html
+++ b/src/app/header.component.html
@@ -31,7 +31,14 @@
                         <li><a [routerLink]="['longboards/team']">Longboard Team</a></li>
                     </ul>
                 </li>
-                <li><a [routerLink]="['apparel']">Apparel</a></li>
+                <li><a [routerLink]="['apparel']">Apparel</a>
+                     <ul>
+                        <li><a [routerLink]="['apparel/shirts']">Shirts</a></li>
+                        <li><a [routerLink]="['apparel/hoodies']">Hoodies</a></li>
+                        <li><a [routerLink]="['apparel/hats']">Hats</a></li>
+                        <li><a [routerLink]="['apparel/accessories']">Accessories</a></li>
+                    </ul>
+                </li>
                 <li><a [routerLink]="['company/calendar']">Calendar</a></li>
                 <li><a [routerLink]="['company']">Company</a>
                     <ul>
