--- a/src/app/header.component.html
+++ b/src/app/header.component.html
@@ -37,6 +37,7 @@
                         <li><a [routerLink]="['apparel/hoodies']">Hoodies</a></li>
                         <li><a [routerLink]="['apparel/hats']">Hats</a></li>
                         <li><a [routerLink]="['apparel/accessories']">Accessories</a></li>
+                        <li><a [routerLink]="['apparel/mens']">Mens</a></li>
                     </ul>
                 </li>
                 <li><a [routerLink]="['company/calendar']">Calendar</a></li>
