--- a/src/app/apparel/apparel.component.html
+++ b/src/app/apparel/apparel.component.html
@@ -2,4 +2,14 @@
   <div id="top-img">
 		<img src="../../assets/img/apparel/ApparelHero.jpg" alt="">
 	</div>
+
+	<div>
+		<ul>
+			<li><a [routerLink]="['shirts']">Shirts</a></li>
+			<li><a [routerLink]="['hoodies']">Hoodies</a></li>
+			<li><a [routerLink]="['hats']">Hats</a></li>
+			<li><a [routerLink]="['accessories']">Accessories</a></li>
+			<li><a [routerLink]="['mens']">Mens</a></li>
+		</ul>
+	</div>
 </div>
