--- a/src/app/apparel/apparel.component.html
+++ b/src/app/apparel/apparel.component.html
@@ -1,15 +1,24 @@
-<div id="content">
-  <div id="top-img">
-		<img src="../../assets/img/apparel/ApparelHero.jpg" alt="">
-	</div>
-
-	<div>
-		<ul>
+<div class="apparel-header">
+	<h1 class="text-align-center">Apparel</h1>
+		<ul id="categories">
 			<li><a [routerLink]="['shirts']">Shirts</a></li>
 			<li><a [routerLink]="['hoodies']">Hoodies</a></li>
 			<li><a [routerLink]="['hats']">Hats</a></li>
 			<li><a [routerLink]="['accessories']">Accessories</a></li>
 			<li><a [routerLink]="['mens']">Mens</a></li>
+			<li><a [routerLink]="['womens']">Womens</a></li>
+			<li><a [routerLink]="['kidss']">Kids</a></li>
 		</ul>
-	</div>
 </div>
+
+<div id="content">	
+
+	<!--<div class="top-parallax" style="background-image:url('../../assets/img/apparel/ApparelHero.jpg')"></div>-->
+	<div class="store-img">
+		<img src="../../assets/img/apparel/ApparelHero.jpg" alt="">
+	</div>
+
+	<div style="height: 200px"></div>
+	<div style="height: 200px"></div>
+</div>
+
