--- a/src/app/apparel/apparel-hats/apparel-hats.component.html
+++ b/src/app/apparel/apparel-hats/apparel-hats.component.html
@@ -1,10 +1,52 @@
-<div class="hats-content">
-  <p>
-    apparel-hats works!
-  </p>
+<div class="apparel-header">
+	<h1 class="text-align-center">Hats</h1>
+		<ul id="categories">
+			<li><a [routerLink]="['/apparel/shirts']">Shirts</a></li>
+			<li><a [routerLink]="['/apparel/hoodies']">Hoodies</a></li>
+			<li><a [routerLink]="['/apparel/hats']">Hats</a></li>
+			<li><a [routerLink]="['/apparel/accessories']">Accessories</a></li>
+			<li><a [routerLink]="['/apparel/mens']">Mens</a></li>
+			<li><a [routerLink]="['/apparel/womens']">Womens</a></li>
+			<li><a [routerLink]="['/apparel/kids']">Kids</a></li>
+		</ul>
+</div>
 
-  <div *ngFor="let hat of hats">
+<div id="content">	
+
+	<!--<div class="top-parallax" style="background-image:url('../../assets/img/apparel/ApparelHero.jpg')"></div>-->
+	<div class="store-img">
+		<img src="../../assets/img/apparel/ApparelHero.jpg" alt="">
+	</div>
+
+	<div *ngFor="let hat of hats">
     <p>{{hat.name}}</p>
     <img src="{{hat.photo}}" alt="">
   </div>
 </div>
+
+
+
+
+
+<!--<div id="content">
+	<div class="top-parallax" style="background-image:url('../../../assets/img/apparel/ApparelHero.jpg')"></div>
+
+	<div id="main">
+		<h1 class="title-has-line text-align-center">Apparel</h1>
+
+		<ul id="categories">
+			<li><a [routerLink]="['/apparel/shirts']">Shirts</a></li>
+			<li><a [routerLink]="['/apparel/hoodies']">Hoodies</a></li>
+			<li><a [routerLink]="['/apparel/hats']">Hats</a></li>
+			<li><a [routerLink]="['/apparel/accessories']">Accessories</a></li>
+			<li><a [routerLink]="['/apparel/mens']">Mens</a></li>
+		</ul>
+
+    <div *ngFor="let hat of hats">
+      <p>{{hat.name}}</p>
+      <img src="{{hat.photo}}" alt="">
+    </div>
+
+	</div>
+
+</div>-->
