--- a/src/app/apparel/apparel.component.scss
+++ b/src/app/apparel/apparel.component.scss
@@ -1,9 +1,68 @@
-#content {
-	background-color:#f8f8f8;
-	// height: 300px;
+// .top-parallax {
+//     height: 700px;
+// 	width: 100%;
+//     top: 10px;
+//     background-attachment: fixed;
+//     background-position: center;
+//     background-repeat: no-repeat;
+//     background-size: contain;
+// }
+
+
+// Header
+.apparel-header {
+	margin-top: 75px;
+	position: relative;
 }
-#top-img {
+
+.store-img {
+	display: flex;
+	justify-content: center;
+}
+
+.store-img img {
+	width: 750px;
+	height: 350px;
+}
+
+#main {
+	margin-top: 50px;
+}
+
+
+// Navigation Links
+#categories {
+	margin: 0;
+	text-align: center;
 	width: 100%;
-	height: 100%px;
-	// background-color: black;
+	opacity:1;
+	max-height:200px;
+	-webkit-transition: all 0.3s ease-in-out;
+	-moz-transition: all 0.3s ease-in-out;
+	-o-transition: all 0.3s ease-in-out;
+	-ms-transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;
+}
+
+#categories li {
+	display: inline-block;
+	height: 20px;
+	line-height: 20px;
+	margin: 0px 10px 20px;
+}
+#categories li a {
+	display:inline-block;
+	text-transform:uppercase;
+	color:#999999;
+	font-family: 'Titillium Web';
+	font-weight:600;
+	font-size:14px;
+}
+#categories li a:hover {
+	color:#e11f26;
+}
+	
+#categories li a.active {
+	color:#000;
+	font-weight:700;
 }
