Added longboards and styling to main longboard view

--- a/src/app/longboards/longboards.component.html
+++ b/src/app/longboards/longboards.component.html
@@ -8,10 +8,129 @@
 	<div id="main">
 		<h1 class="title-has-line text-align-center">Longboards</h1>
 
-				<!-- Longboard info goes here, pull from database instead of hardcode -->
+		<ul id="filters">
+			<li><a id="all" href="index.html#" data-filter="*" class="active">All</a></li>
+			<li><a href="index.html#" data-filter=".8356146">Downhill</a></li>
+			<li><a href="index.html#" data-filter=".8355548">Freeride</a></li>
+			<li><a href="index.html#" data-filter=".8356147">Cruiser</a></li>
+		</ul>
 	
 
-		<h2 style="text-align: center;">Longboard Content Goes here from DB</h2>
+		<div id="portfolio-wrap" class="no-gutter">
+			<div id="portfolio" data-col="6">
+
+				<div class="item1">
+					<a href="avalanche-1.html">
+						<div class="item-content" style="background-image:url('../../../assets/products/longboards/Avalanche/AvalancheSingle.png')"></div>
+						<div class="item-overlay overlay-white">
+							<span class="item-title">Avalanche</span>
+							<span class="item-cat">Downhill/Freeride</span>
+						</div>
+					</a>
+				</div>
+				<div class="item2">
+					<a href="clutch-1.html">
+						<div class="item-content" style="background-image:url('../../../assets/products/longboards/Clutch/ClutchSingle.png')"></div>
+						<div class="item-overlay overlay-white">
+							<span class="item-title">Clutch</span>
+							<span class="item-cat">Cruiser/Freeride</span>
+						</div>
+					</a>
+				</div>
+				<div class="item3">
+					<a href="covert-1.html">
+						<div class="item-content" style="background-image:url('../../../assets/products/longboards/Commander/CovertSingle.png')"></div>
+						<div class="item-overlay overlay-white">
+							<span class="item-title">Covert</span>
+							<span class="item-cat">Cruiser/Freeride</span>
+						</div>
+					</a>
+				</div>
+				<div class="item4">
+					<a href="deviant-1.html">
+						<div class="item-content" style="background-image:url('../../../assets/products/longboards/Deviant/DeviantSingle.png')"></div>
+						<div class="item-overlay overlay-white">
+							<span class="item-title">Deviant</span>
+							<span class="item-cat">Freeride Downhill</span>
+						</div>
+					</a>
+				</div>
+				<div class="item5">
+					<a href="dime.html">
+						<div class="item-content" style="background-image:url('../../../assets/products/longboards/Revival/DimeSingle.png')"></div>
+						<div class="item-overlay overlay-white">
+							<span class="item-title">Dime</span>
+							<span class="item-cat">Cruiser/Mini</span>
+						</div>
+					</a>
+				</div>
+				<div class="item6">
+					<a href="eljefe.html">
+						<div class="item-content" style="background-image:url('../../../assets/products/longboards/admiral/ElJefeSingle.png')"></div>
+						<div class="item-overlay overlay-white">
+							<span class="item-title">El Jefe</span>
+							<span class="item-cat">Cruiser/Carver</span>
+						</div>
+					</a>
+				</div>
+				<div class="item7">
+					<a href="heist-1.html">
+						<div class="item-content" style="background-image:url('../../../assets/products/longboards/Heist/HeistSingle.png')"></div>
+						<div class="item-overlay overlay-white">
+							<span class="item-title">Heist</span>
+							<span class="item-cat">Flex Deck</span>
+						</div>
+					</a>
+				</div>
+				<div class="item8">
+					<a href="reaper-1.html">
+						<div class="item-content" style="background-image:url('../../../assets/products/longboards/Reaper/ReaperSingle.png')"></div>
+						<div class="item-overlay overlay-white">
+							<span class="item-title">Reaper</span>
+							<span class="item-cat">Downhill</span>
+						</div>
+					</a>
+				</div>
+				<div class="item9">
+					<a href="superfreak-1.html">
+						<div class="item-content" style="background-image:url('../../../assets/products/longboards/Superfreak/SuperfreakSingle.png')"></div>
+						<div class="item-overlay overlay-white">
+							<span class="item-title">Superfreak</span>
+							<span class="item-cat">Cruiser/Freeride</span>
+						</div>
+					</a>
+				</div>
+				<div class="item10">
+					<a href="wingman.html">
+						<div class="item-content" style="background-image:url('../../../assets/products/longboards/Hooligan/WingmanSingle.png')"></div>
+						<div class="item-overlay overlay-white">
+							<span class="item-title">Wingman</span>
+							<span class="item-cat">Downhill/Freeride</span>
+						</div>
+					</a>
+				</div>
+
+			</div>
+
+		</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 		<div class="container">
