--- a/src/styles.scss
+++ b/src/styles.scss
@@ -760,6 +760,9 @@
 	.padding-box {
 		padding:0 150px;
 	}
+	#portfolio-wrap {
+		width: 1280px;
+	}
 }
 
 @media only screen and (max-width: 1024px) {
