--- a/src/app/longboards/longboards.component.scss
+++ b/src/app/longboards/longboards.component.scss
@@ -1,13 +1,3 @@
-#content {
-	background-color:#f8f8f8;
-	// height: 300px;
-}
-// #top-img {
-// 	width: 100%;
-// 	height: 100%px;
-// 	// background-color: black;
-// }
-
 .top-parallax {
     height: 700px;
 	width: 100%;
@@ -21,6 +11,457 @@
 #main {
     margin-top: 50px;
 }
+
+
+// Navigation Links
+#filters {
+	margin: 0;
+	text-align: center;
+	width: 100%;
+	opacity:1;
+	max-height:200px;
+	-webkit-transition: all 0.3s ease-in-out;
+	-moz-transition: all 0.3s ease-in-out;
+	-o-transition: all 0.3s ease-in-out;
+	-ms-transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;
+}
+
+#filters li {
+	display: inline-block;
+	height: 20px;
+	line-height: 20px;
+	margin: 0px 10px 20px;
+}
+#filters li a {
+	display:inline-block;
+	text-transform:uppercase;
+	color:#999999;
+	font-family: 'Titillium Web';
+	font-weight:600;
+	font-size:14px;
+}
+#filters li a:hover {
+	color:#e11f26;
+}
+	
+#filters li a.active {
+	color:#000;
+	font-weight:700;
+}
+
+
+#portfolio-wrap {
+	width:940px !important;
+	margin:0 auto;		
+}
+
+#portfolio-wrap.no-gutter {
+	width:1280px;
+	margin:0 auto;		
+}
+
+#portfolio {
+	height: 780px;
+	position: relative;
+	width: 100%;
+	-webkit-transition: height 0.3s ease-in-out;
+	-moz-transition: height 0.3s ease-in-out;
+	-o-transition: height 0.3s ease-in-out;
+	-ms-transition: height 0.3s ease-in-out;
+	transition: height 0.3s ease-in-out;
+}
+
+.item {
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	overflow:hidden;
+}
+
+.item1 {
+	position: absolute;
+	left: 0px;
+	top: 0px;
+	width: 156px;
+	height: 390px;
+	margin: 0px;
+	opacity: 1;
+}
+.item2 {
+	position: absolute;
+	left: 156px;
+	top: 0px;
+	width: 156px;
+	height: 390px;
+	margin: 0px;
+	opacity: 1;
+}
+.item3 {
+	position: absolute;
+	left: 312px;
+	top: 0px;
+	width: 156px;
+	height: 390px;
+	margin: 0px;
+	opacity: 1;
+}
+
+.item4 {
+	position: absolute;
+	left: 468px;
+	top: 0px;
+	width: 156px;
+	height: 390px;
+	margin: 0px;
+	opacity: 1;
+}
+.item5 {
+	position: absolute;
+	left: 624px;
+	top: 0px;
+	width: 156px;
+	height: 390px;
+	margin: 0px;
+	opacity: 1;
+}
+.item6 {
+	position: absolute;
+	left: 780px;
+	top: 0px;
+	width: 156px;
+	height: 390px;
+	margin: 0px;
+	opacity: 1;
+}
+
+.item7 {
+	position: absolute;
+	left: 0px;
+	top: 390px;
+	width: 156px;
+	height: 390px;
+	margin: 0px;
+	opacity: 1;
+}
+.item8 {
+	position: absolute;
+	left: 156px;
+	top: 390px;
+	width: 156px;
+	height: 390px;
+	margin: 0px;
+	opacity: 1;
+}
+.item9 {
+	position: absolute;
+	left: 312px;
+	top: 390px;
+	width: 156px;
+	height: 390px;
+	margin: 0px;
+	opacity: 1;
+}
+.item10 {
+	position: absolute;
+	left: 468px;
+	top: 390px;
+	width: 156px;
+	height: 390px;
+	margin: 0px;
+	opacity: 1;
+}
+
+.item-content {
+	height:100%;
+	width:100%;
+	position:absolute;
+	background-color:#fff;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	text-align:center;
+	padding:0px;
+	background-size:cover;
+	background-position:center center;
+	overflow:hidden;
+	display: table;
+	-webkit-transform: scale(1.01);
+	-moz-transform: scale(1.01);
+	-o-transform: scale(1.01);
+	-ms-transform: scale(1.01);
+	transform: scale(1.01);
+	-webkit-transition: all 2s cubic-bezier(0.23, 1, 0.32, 1) 0s;
+	-moz-transition: all 2s cubic-bezier(0.23, 1, 0.32, 1) 0s;
+	-o-transition: all 2s cubic-bezier(0.23, 1, 0.32, 1) 0s;
+	-ms-transition: all 2s cubic-bezier(0.23, 1, 0.32, 1) 0s;
+	transition: all 2s cubic-bezier(0.23, 1, 0.32, 1) 0s;
+}
+
+.item1:hover .item-content, .item2:hover .item-content, .item3:hover .item-content, .item4:hover .item-content, .item5:hover .item-content, .item6:hover .item-content, .item7:hover .item-content, .item8:hover .item-content, .item9:hover .item-content, .item10:hover .item-content {
+	-webkit-transform: scale(1.1);
+	-moz-transform: scale(1.1);
+	-o-transform: scale(1.1);
+	-ms-transform: scale(1.1);
+	transform: scale(1.1);
+	-webkit-transition: all 5s cubic-bezier(0.23, 1, 0.32, 1) 0s;
+	-moz-transition: all 5s cubic-bezier(0.23, 1, 0.32, 1) 0s;
+	-o-transition: all 5s cubic-bezier(0.23, 1, 0.32, 1) 0s;
+	-ms-transition: all 5s cubic-bezier(0.23, 1, 0.32, 1) 0s;
+	transition: all 5s cubic-bezier(0.23, 1, 0.32, 1) 0s;
+}
+
+.item-overlay {
+	height:100%;
+	width:100%;
+	background:rgba(0,0,0,0);
+	position:absolute;
+	opacity:0;
+	box-sizing:border-box;
+	-webkit-transition: all 0.6s ease-in-out;
+	-moz-transition: all 0.6s ease-in-out;
+	-o-transition: all 0.6s ease-in-out;
+	-ms-transition: all 0.6s ease-in-out;
+	transition: all 0.6s ease-in-out;		
+}
+
+.padding-overlay {
+	padding:0px;
+	box-sizing:border-box;
+	display:table;
+	position:absolute;
+	width:100%;
+	height:100%;
+	-webkit-transition: all 0.2s ease-in-out;
+	-moz-transition: all 0.2s ease-in-out;
+	-o-transition: all 0.2s ease-in-out;
+	-ms-transition: all 0.2s ease-in-out;
+	transition: all 0.2s ease-in-out;
+}
+
+.item1:hover .padding-overlay, .item2:hover .padding-overlay, .item3:hover .padding-overlay, .item4:hover .padding-overlay, .item5:hover .padding-overlay, .item6:hover .padding-overlay, .item7:hover .padding-overlay, .item8:hover .padding-overlay, .item9:hover .padding-overlay, .item10:hover .padding-overlay {
+	padding:30px;
+	-webkit-transition: all 0.2s ease-in-out 0.1s;
+	-moz-transition: all 0.2s ease-in-out 0.1s;
+	-o-transition: all 0.2s ease-in-out 0.1s;
+	-ms-transition: all 0.2s ease-in-out 0.1s;
+	transition: all 0.2s ease-in-out 0.1s;
+}
+
+.padding-overlay .item-overlay {
+	display:table-cell;
+	position:relative;
+	overflow:hidden;
+	text-align:center;
+	vertical-align:middle;
+}
+
+.item1:hover .item-overlay, .item2:hover .item-overlay, .item3:hover .item-overlay, .item4:hover .item-overlay, .item5:hover .item-overlay, .item6:hover .item-overlay, .item7:hover .item-overlay, .item8:hover .item-overlay, .item9:hover .item-overlay, .item10:hover .item-overlay {
+	background:rgba(0,0,0,0.8);
+	opacity:1;
+}
+
+.item1:hover .item-overlay.overlay-white, .item2:hover .item-overlay.overlay-white, .item3:hover .item-overlay.overlay-white, .item4:hover .item-overlay.overlay-white, .item5:hover .item-overlay.overlay-white, .item6:hover .item-overlay.overlay-white, .item7:hover .item-overlay.overlay-white, .item8:hover .item-overlay.overlay-white, .item9:hover .item-overlay.overlay-white, .item10:hover .item-overlay.overlay-white {
+	background:rgba(255,255,255,0.9);
+}
+
+.item1 .item-overlay.overlay-gradient, .item2 .item-overlay.overlay-gradient, .item3 .item-overlay.overlay-gradient, .item4 .item-overlay.overlay-gradient, .item5 .item-overlay.overlay-gradient, .item6 .item-overlay.overlay-gradient, .item7 .item-overlay.overlay-gradient, .item8 .item-overlay.overlay-gradient, .item9 .item-overlay.overlay-gradient, .item10 .item-overlay.overlay-gradient  {
+	background: rgb(111,226,158); /* Old browsers */
+	background: -moz-linear-gradient(-45deg,  rgba(111,226,158,0.8) 0%, rgba(91,218,209,0.8) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,rgba(111,226,158,0.8)), color-stop(100%,rgba(91,218,209,0.8))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(-45deg,  rgba(111,226,158,0.8) 0%,rgba(91,218,209,0.8) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(-45deg,  rgba(111,226,158,0.8) 0%,rgba(91,218,209,0.8) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(-45deg,  rgba(111,226,158,0.8) 0%,rgba(91,218,209,0.8) 100%); /* IE10+ */
+	background: linear-gradient(135deg,  rgba(111,226,158,0.8) 0%,rgba(91,218,209,0.8) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6fe29e', endColorstr='#5bdad1',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+	opacity:0;
+	-webkit-transition: all 0.6s ease-in-out;
+	-moz-transition: all 0.6s ease-in-out;
+	-o-transition: all 0.6s ease-in-out;
+	-ms-transition: all 0.6s ease-in-out;
+	transition: all 0.6s ease-in-out;
+}
+
+.item1:hover .item-overlay.overlay-gradient, .item2:hover .item-overlay.overlay-gradient, .item3:hover .item-overlay.overlay-gradient, .item4:hover .item-overlay.overlay-gradient, .item5:hover .item-overlay.overlay-gradient, .item6:hover .item-overlay.overlay-gradient, .item7:hover .item-overlay.overlay-gradient, .item8:hover .item-overlay.overlay-gradient, .item9:hover .item-overlay.overlay-gradient, .item10:hover .item-overlay.overlay-gradient {
+	background: rgb(111,226,158); /* Old browsers */
+	background: -moz-linear-gradient(-45deg,  rgba(111,226,158,0.8) 0%, rgba(91,218,209,0.8) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,rgba(111,226,158,0.8)), color-stop(100%,rgba(91,218,209,0.8))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(-45deg,  rgba(111,226,158,0.8) 0%,rgba(91,218,209,0.8) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(-45deg,  rgba(111,226,158,0.8) 0%,rgba(91,218,209,0.8) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(-45deg,  rgba(111,226,158,0.8) 0%,rgba(91,218,209,0.8) 100%); /* IE10+ */
+	background: linear-gradient(135deg,  rgba(111,226,158,0.8) 0%,rgba(91,218,209,0.8) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6fe29e', endColorstr='#5bdad1',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+	opacity:1;
+}
+
+.item-cat {
+	display:block;
+	font-family: 'Titillium Web' ;
+	font-weight:400;
+	font-size:13px;
+	text-transform:uppercase;
+	margin-left:-100%;
+	margin-top:0;
+	color:#444;		
+	-webkit-transition: all 0.3s ease-in-out;
+	-moz-transition: all 0.3s ease-in-out;
+	-o-transition: all 0.3s ease-in-out;
+	-ms-transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;
+}
+
+.padding-overlay .item-cat {
+	margin:0 20px 5px 20px;
+	opacity:0;
+	-ms-transform: translateY(-20px);
+	-webkit-transform: translateY(-20px);
+	-o-transition:translateY(-20px);
+	transform: translateY(-20px);
+	-webkit-transition: all 0.3s ease-in-out;
+	-moz-transition: all 0.3s ease-in-out;
+	-o-transition: all 0.3s ease-in-out;
+	-ms-transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;
+}
+
+.item-overlay.overlay-gradient .item-cat {
+	color:#fff;
+}
+
+.item1:hover .item-cat, .item2:hover .item-cat, .item3:hover .item-cat, .item4:hover .item-cat, .item5:hover .item-cat, .item6:hover .item-cat, .item7:hover .item-cat, .item8:hover .item-cat, .item9:hover .item-cat, .item10:hover .item-cat {
+	margin-left:30px;
+	-webkit-transition: all 0.6s ease-in-out;
+	-moz-transition: all 0.6s ease-in-out;
+	-o-transition: all 0.6s ease-in-out;
+	-ms-transition: all 0.6s ease-in-out;
+	transition: all 0.6s ease-in-out;
+}
+
+.item1:hover .padding-overlay .item-cat, .item2:hover .padding-overlay .item-cat, .item3:hover .padding-overlay .item-cat, .item4:hover .padding-overlay .item-cat, .item5:hover .padding-overlay .item-cat, .item6:hover .padding-overlay .item-cat, .item7:hover .padding-overlay .item-cat, .item8:hover .padding-overlay .item-cat, .item9:hover .padding-overlay .item-cat, .item10:hover .padding-overlay .item-cat {
+	margin:0 20px 5px 20px;
+	opacity:1;
+	-ms-transform: translateY(0px);
+	-webkit-transform: translateY(0px);
+	-o-transition:translateY(0px);
+	transform: translateY(0px);
+	-webkit-transition: all 0.5s ease-in-out 0.5s;
+	-moz-transition: all 0.5s ease-in-out 0.5s;
+	-o-transition: all 0.5s ease-in-out 0.5s;
+	-ms-transition: all 0.5s ease-in-out 0.5s;
+	transition: all 0.5s ease-in-out 0.5s;
+}
+
+.item-title {
+	display:block;
+	position:relative;
+	font-weight: 600;
+	font-family: 'Titillium Web', sans-serif;
+	color:#fff;
+	font-size:18px;
+	line-height:18px;
+	text-transform:uppercase;
+	margin-left:-100%;
+	margin-top:30px;
+	margin-right:28px;
+	-webkit-transition: all 0.5s ease-in-out;
+	-moz-transition: all 0.5s ease-in-out;
+	-o-transition: all 0.5s ease-in-out;
+	-ms-transition: all 0.5s ease-in-out;
+	transition: all 0.5s ease-in-out;
+}
+
+.padding-overlay .item-title {
+	margin:30px 20px 0px 20px;
+	-ms-transform: translateY(20px);
+	-webkit-transform: translateY(20px);
+	-o-transition:translateY(20px);
+	transform: translateY(20px);
+	opacity:0;
+	font-size:18px;
+	-webkit-transition: all 0.3s ease-in-out;
+	-moz-transition: all 0.3s ease-in-out;
+	-o-transition: all 0.3s ease-in-out;
+	-ms-transition: all 0.3s ease-in-out;
+	transition: all 0.3s ease-in-out;
+}
+
+.item-overlay.overlay-white .item-title {
+	color:#000;
+}
+
+.item1:hover .item-title, .item2:hover .item-title, .item3:hover .item-title, .item4:hover .item-title, .item5:hover .item-title, .item6:hover .item-title, .item7:hover .item-title, .item8:hover .item-title, .item9:hover .item-title, .item10:hover .item-title {
+	margin-left:28px;
+	-webkit-transition: all 0.6s ease-in-out 0.3s;
+	-moz-transition: all 0.6s ease-in-out 0.3s;
+	-o-transition: all 0.6s ease-in-out 0.3s;
+	-ms-transition: all 0.6s ease-in-out 0.3s;
+	transition: all 0.6s ease-in-out 0.3s;
+}
+
+.item1:hover .padding-overlay .item-title, .item2:hover .padding-overlay .item-title, .item3:hover .padding-overlay .item-title, .item4:hover .padding-overlay .item-title, .item5:hover .padding-overlay .item-title, .item6:hover .padding-overlay .item-title, .item7:hover .padding-overlay .item-title, .item8:hover .padding-overlay .item-title, .item9:hover .padding-overlay .item-title, .item10:hover .padding-overlay .item-title {
+	margin:5px 20px 0px 20px;
+	opacity:1;
+	-ms-transform: translateY(0px);
+	-webkit-transform: translateY(0px);
+	-o-transition:translateY(0px);
+	transform: translateY(0px);
+	-webkit-transition: all 0.5s ease-in-out 0.5s;
+	-moz-transition: all 0.5s ease-in-out 0.5s;
+	-o-transition: all 0.5s ease-in-out 0.5s;
+	-ms-transition: all 0.5s ease-in-out 0.5s;
+	transition: all 0.5s ease-in-out 0.5s;
+}
+
+.item-cat:after {
+	background: none repeat scroll 0 0 #666;
+	bottom: -20px;
+	content: "";
+	height: 1px;
+	left: 1px;
+	position: absolute;
+	width: 40px;
+	opacity:0;
+	-webkit-transition: all 0.2s ease-in-out;
+	-moz-transition: all 0.2s ease-in-out;
+	-o-transition: all 0.2s ease-in-out;
+	-ms-transition: all 0.2s ease-in-out;
+	transition: all 0.2s ease-in-out;
+}
+
+.padding-overlay .item-cat:after {
+	content: "";
+	height: 0px;
+}
+
+.item-overlay.overlay-white .item-cat:after {
+	background: none repeat scroll 0 0 rgba(0,0,0,0.2);
+}
+
+.item-overlay.overlay-gradient .item-cat:after {
+	background: none repeat scroll 0 0 rgba(255,255,255,0.4);
+}
+
+.item1:hover .item-cat:after, .item2:hover .item-cat:after, .item3:hover .item-cat:after, .item4:hover .item-cat:after, .item5:hover .item-cat:after, .item6:hover .item-cat:after, .item7:hover .item-cat:after, .item8:hover .item-cat:after, .item9:hover .item-cat:after, .item10:hover .item-cat:after {
+	opacity:1;
+	bottom: -15px;
+	-webkit-transition: all 0.2s ease-in-out 0.9s;
+	-moz-transition: all 0.2s ease-in-out 0.9s;
+	-o-transition: all 0.2s ease-in-out 0.9s;
+	-ms-transition: all 0.2s ease-in-out 0.9s;
+	transition: all 0.2s ease-in-out 0.9s;
+}
+	
+	
+
+
+
+
+
+
+
+
+
+
 
 // News Feed Parallax
 section {
