Added longboards/board/avalanche component, setup route, added routerlink

--- a/src/app/longboards/longboards.component.html
+++ b/src/app/longboards/longboards.component.html
@@ -20,7 +20,7 @@
 			<div id="portfolio" data-col="6">
 
 				<div class="item1">
-					<a href="avalanche-1.html">
+					<a [routerLink]="['/longboards/board/avalanche']">
 						<div class="item-content" style="background-image:url('../../../assets/products/longboards/Avalanche/AvalancheSingle.png')"></div>
 						<div class="item-overlay overlay-white">
 							<span class="item-title">Avalanche</span>
