--- a/src/app/longboards/longboards.component.html
+++ b/src/app/longboards/longboards.component.html
@@ -29,7 +29,7 @@
 					</a>
 				</div>
 				<div class="item2">
-					<a href="clutch-1.html">
+					<a [routerLink]="['/longboards/board/clutch']">
 						<div class="item-content" style="background-image:url('../../../assets/products/longboards/Clutch/ClutchSingle.png')"></div>
 						<div class="item-overlay overlay-white">
 							<span class="item-title">Clutch</span>
@@ -38,7 +38,7 @@
 					</a>
 				</div>
 				<div class="item3">
-					<a href="covert-1.html">
+					<a [routerLink]="['/longboards/board/covert']">
 						<div class="item-content" style="background-image:url('../../../assets/products/longboards/Commander/CovertSingle.png')"></div>
 						<div class="item-overlay overlay-white">
 							<span class="item-title">Covert</span>
@@ -47,7 +47,7 @@
 					</a>
 				</div>
 				<div class="item4">
-					<a href="deviant-1.html">
+					<a [routerLink]="['/longboards/board/deviant']">
 						<div class="item-content" style="background-image:url('../../../assets/products/longboards/Deviant/DeviantSingle.png')"></div>
 						<div class="item-overlay overlay-white">
 							<span class="item-title">Deviant</span>
@@ -56,7 +56,7 @@
 					</a>
 				</div>
 				<div class="item5">
-					<a href="dime.html">
+					<a [routerLink]="['/longboards/board/dime']">
 						<div class="item-content" style="background-image:url('../../../assets/products/longboards/Revival/DimeSingle.png')"></div>
 						<div class="item-overlay overlay-white">
 							<span class="item-title">Dime</span>
@@ -65,7 +65,7 @@
 					</a>
 				</div>
 				<div class="item6">
-					<a href="eljefe.html">
+					<a [routerLink]="['/longboards/board/el-jefe']">
 						<div class="item-content" style="background-image:url('../../../assets/products/longboards/admiral/ElJefeSingle.png')"></div>
 						<div class="item-overlay overlay-white">
 							<span class="item-title">El Jefe</span>
@@ -74,7 +74,7 @@
 					</a>
 				</div>
 				<div class="item7">
-					<a href="heist-1.html">
+					<a [routerLink]="['/longboards/board/heist']">
 						<div class="item-content" style="background-image:url('../../../assets/products/longboards/Heist/HeistSingle.png')"></div>
 						<div class="item-overlay overlay-white">
 							<span class="item-title">Heist</span>
@@ -83,7 +83,7 @@
 					</a>
 				</div>
 				<div class="item8">
-					<a href="reaper-1.html">
+					<a [routerLink]="['/longboards/board/reaper']">
 						<div class="item-content" style="background-image:url('../../../assets/products/longboards/Reaper/ReaperSingle.png')"></div>
 						<div class="item-overlay overlay-white">
 							<span class="item-title">Reaper</span>
@@ -92,7 +92,7 @@
 					</a>
 				</div>
 				<div class="item9">
-					<a href="superfreak-1.html">
+					<a [routerLink]="['/longboards/board/superfreak']">
 						<div class="item-content" style="background-image:url('../../../assets/products/longboards/Superfreak/SuperfreakSingle.png')"></div>
 						<div class="item-overlay overlay-white">
 							<span class="item-title">Superfreak</span>
@@ -101,7 +101,7 @@
 					</a>
 				</div>
 				<div class="item10">
-					<a href="wingman.html">
+					<a [routerLink]="['/longboards/board/wingman']">
 						<div class="item-content" style="background-image:url('../../../assets/products/longboards/Hooligan/WingmanSingle.png')"></div>
 						<div class="item-overlay overlay-white">
 							<span class="item-title">Wingman</span>
