--- a/src/app/longboards/longboards-board-avalanche/longboards-board-avalanche.component.html
+++ b/src/app/longboards/longboards-board-avalanche/longboards-board-avalanche.component.html
@@ -57,7 +57,7 @@
 
           <div class="one_half last" style="color:#ccc;">
             <h3 class="title-has-line">Features</h3>
-            <ul>
+            <ul class="spec-list">
               <li>American Made
                 <br /> </li>
               <li>CNC Machined Fiberglass Reinforced Wheel Wells</li>
@@ -71,13 +71,12 @@
               <li>P-tex Nose and Tail Protection</li>
               <li>Patented Contour Technology</li>
             </ul>
-            <ul>
+            <ul class="spec-list">
               <li>3.9 lb Deck Only </li>
               <li>7.7 lb Complete</li>
               <li><em>All weights w/grip tape and will vary with handmade boards*</em>
               </li>
             </ul>
-
           </div>
           <div class="clear"></div>
         </div>
@@ -102,19 +101,10 @@
       <section class="parallax video-youtube" style="background-image: url('../../../../assets/products/longboards/longboards-hero.jpg');">
         <div class="overlay text-align-center" style="background-color:rgba(0,0,0,0.0)">
           <h3 class="white title-has-line">Watch the Video</h3>
-
-          <!--<figure class="vimeo vimeo-youtube">
-            <a href="http://player.vimeo.com/video/?title=0&amp;byline=0&amp;portrait=0">
-              <img src="../../../../assets/products/longboards/Avalanche/AvalancheVideoImage-16.jpg" alt="Video" />
-            </a>
-          </figure>-->
           <div class="cntVid">
             <figure class="youtube youtube-youtube">
-            <!--<a href="https://www.youtube.com/embed/--MhzJgoT8w">
-              <img src="../../../../assets/products/longboards/Avalanche/AvalancheVideoImage-16.jpg" alt="Video" />
-            </a>-->
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/--MhzJgoT8w" frameborder="0" allowfullscreen></iframe>
-          </figure>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/--MhzJgoT8w" frameborder="0" allowfullscreen></iframe>
+           </figure>
           </div>
         </div>
       </section>
