--- a/src/app/longboards/longboards-board-clutch/longboards-board-clutch.component.html
+++ b/src/app/longboards/longboards-board-clutch/longboards-board-clutch.component.html
@@ -1,3 +1,108 @@
-<p>
-  longboards-board-clutch works!
-</p>
+<div id="content">
+  <div class="top-parallax" style="background-image:url('../../../../assets/products/longboards/Clutch/ClutchHero16.jpg')"></div>
+
+  <div id="main">
+    <div class="container">
+       <div class="one_half">
+        <h3 class="title">Clutch</h3>
+        <p class="monospace title-has-line">Cruiser/Freeride</p>
+        <div class="addthis_custom_sharing"></div>
+        <hr class="small" />
+        <p>
+          Shift into high gear with the Never Summer Clutch. This is a drop-down drop-thru, low rise deck offering high-speed stability at an affordable price. 
+        </p>
+        <br />
+        <div class="buyNowWrapper">
+          <ul class="buyNow">
+            <li><a href="javascript:void(0)">Buy Now</a>
+              <ul>
+                <li><a href="../company/dealers.html">Find a Dealer</a></li>
+                <li><a href="http://neversummer.shptron.com/p/2016-clutch?pp=15" target="_blank">Buy Online - Complete</a></li>
+                <li><a href="http://neversummer.shptron.com/p/2015-clutch-deck-only?pp=15" target="_blank">Buy Online - Deck Only</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="one_half last">
+        <hr class="small" />
+        <img src="../../../../assets/products/longboards/Clutch/Clutch16_2.png" />
+      </div>
+
+      <section class="parallax specsfeatures" style="background-image: url('../../../../assets/products/longboards/longboards-4.jpg'); background-position: 50% 59px;">
+        <div class="overlay" style="background-color:rgba(255,255,255,0.0)">
+          <div class="one_half">
+            <h3 class="title-has-line">Specs</h3>
+            <table class="specstable">
+              <thead>
+                <tr>
+                  <td>Length</td>
+                  <td>Width</td>
+                  <td>Wheel Base</td>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>39"</td>
+                  <td>10"</td>
+                  <td>29.4"</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+
+          <div class="one_half last" style="color:#ccc;">
+            <h3 class="title-has-line">Features</h3>
+            <ul class="spec-list">
+              <li>American Made
+                <br /> </li>
+              <li>3/4" Drop-Down and Drop-Thru</li>
+              <li>3/8" Rocker</li>
+              <li>Composite Construction</li>
+              <li>Multi-Horizontal Maple Veneer Core Technology</li>
+              <li>Matte Base Finish</li>
+            </ul>
+            <ul class="spec-list">
+              <li>4.95 lb Deck Only </li>
+              <li>8.9 lb Complete</li>
+              <li><em>All weights w/grip tape and will vary with handmade boards*</em>
+              </li>
+            </ul>
+          </div>
+          <div class="clear"></div>
+        </div>
+      </section>
+
+      <hr>
+
+      <div class="bottom-images">
+        <div class="box-img">
+          <img src="../../../../assets/products/longboards/Clutch/ClutchView1-16.jpg" alt="image" />
+        </div>
+        <div class="box-img">
+          <img src="../../../../assets/products/longboards/Clutch/ClutchView2-16.jpg" alt="image" />
+        </div>
+        <div class="box-img">
+         <img src="../../../../assets/products/longboards/Clutch/clutch2016completeview.jpg" alt="image" />
+        </div>
+      </div>
+
+      <hr>
+
+      <section class="parallax video-youtube" style="background-image: url('../../../../assets/products/longboards/longboards-hero.jpg');">
+        <div class="overlay text-align-center" style="background-color:rgba(0,0,0,0.0)">
+          <h3 class="white title-has-line">Watch the Video</h3>
+          <div class="cntVid">
+            <figure class="youtube youtube-youtube">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/KL6HXRifzGY" frameborder="0" allowfullscreen></iframe>
+            </figure>
+          </div>
+        </div>
+      </section>
+
+      <hr>
+
+    </div>
+  </div>
+</div>
