--- a/src/app/longboards/longboards-board-wingman/longboards-board-wingman.component.html
+++ b/src/app/longboards/longboards-board-wingman/longboards-board-wingman.component.html
@@ -1,3 +1,9 @@
-<p>
-  longboards-board-wingman works!
-</p>
+<div id="content">
+  <div class="top-parallax" style="background-image:url('../../../../assets/products/longboards/Avalanche/AvalancheHero16.jpg')"></div>
+
+  <div id="main">
+    <div class="container">
+      
+    </div>
+  </div>
+</div>
