Completed Longboards/covert view and completely styled

--- a/src/app/longboards/longboards-board-avalanche/longboards-board-avalanche.component.html
+++ b/src/app/longboards/longboards-board-avalanche/longboards-board-avalanche.component.html
@@ -58,8 +58,7 @@
           <div class="one_half last" style="color:#ccc;">
             <h3 class="title-has-line">Features</h3>
             <ul class="spec-list">
-              <li>American Made
-                <br /> </li>
+              <li>American Made</li>
               <li>CNC Machined Fiberglass Reinforced Wheel Wells</li>
               <li>Top Mount 3/16" Micro Drop</li>
               <li>1/4" Rocker</li>
@@ -110,8 +109,6 @@
       </section>
 
       <hr>
-
-      
 
     </div>
   </div>
