--- a/src/app/longboards/longboards-board-covert/longboards-board-covert.component.html
+++ b/src/app/longboards/longboards-board-covert/longboards-board-covert.component.html
@@ -1,9 +1,108 @@
 <div id="content">
-  <div class="top-parallax" style="background-image:url('../../../../assets/products/longboards/Avalanche/AvalancheHero16.jpg')"></div>
+  <div class="top-parallax" style="background-image:url('../../../../assets/products/longboards/Commander/CovertHero16.jpg')"></div>
 
   <div id="main">
     <div class="container">
-      
+
+      <div class="one_half">
+        <h3 class="title">Covert</h3>
+        <p class="monospace title-has-line">Cruiser/Freeride</p>
+        <div class="addthis_custom_sharing"></div>
+        <hr class="small" />
+        <p>
+          The Covert fulfills objectives. This symmetrical freeride cruiser is designed to rip back roads or your local parking garage with no one being the wiser. Loaded with longboard weaponry like a 3-D molded core, patented contour technology, and twin kicks. The Covert is tactile and lightweight, ready to handle any operation. 
+        </p>
+        <br />
+        <div class="buyNowWrapper">
+          <ul class="buyNow">
+            <li><a href="javascript:void(0)">Buy Now</a>
+              <ul>
+                <li><a href="../company/dealers.html">Find a Dealer</a></li>
+                <li><a href="http://neversummer.shptron.com/p/2016-covert?pp=15" target="_blank">Buy Online - Complete</a></li>
+                <li><a href="http://neversummer.shptron.com/p/2016-covert-deck-only?pp=15" target="_blank">Buy Online - Deck Only</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="one_half last">
+        <hr class="small" />
+        <img src="../../../../assets/products/longboards/Commander/Covert16_2.png" />
+      </div>
+
+      <section class="parallax" style="background-image: url('../../../../assets/products/longboards/longboards-4.jpg'); background-position: 50% 59px;">
+        <div class="overlay" style="background-color:rgba(255,255,255,0.0)">
+          <div class="one_half">
+            <h3 class="title-has-line">Specs</h3>
+            <table class="specstable">
+              <thead>
+                <tr>
+                  <td>Length</td>
+                  <td>Width</td>
+                  <td>Adjustable Wheel Base</td>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>37"</td>
+                  <td>10"</td>
+                  <td>23" - 24"</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="one_half last" style="color:#ccc;">
+            <h3 class="title-has-line">Features</h3>
+            <ul class="spec-list">
+              <li>American Made</li>
+              <li>CNC Machined Fiberglass Reinforced Wheel Wells</li>
+              <li>Symmetrical Shape</li>
+              <li>1/2" Rocker</li>
+              <li>Dual Core Technology</li>
+              <li>Twin Kicks</li>
+              <li>Grab Rails</li>
+              <li>3-D Molded Core</li>
+              <li>Matte Finish</li>
+              <li>Patented Contour Technology</li>
+            </ul>
+            <ul class="spec-list">
+              <li><em>All weights w/grip tape and will vary with handmade boards*</em> </li>
+            </ul>
+          </div>
+          <div class="clear"></div>
+        </div>
+      </section>
+
+      <hr>
+
+      <div class="bottom-images">
+        <div class="box-img">
+          <img src="../../../../assets/products/longboards/Commander/CovertView1-16.jpg" alt="image" />
+        </div>
+        <div class="box-img">
+          <img src="../../../../assets/products/longboards/Commander/CovertView2-16.jpg" alt="image" />
+        </div>
+        <div class="box-img">
+         <img src="../../../../assets/products/longboards/Commander/covert2016completeview.jpg" alt="image" />
+        </div>
+      </div>
+
+      <hr>
+
+      <section class="parallax video-youtube" style="background-image: url('../../../../assets/products/longboards/longboards-hero.jpg');">
+        <div class="overlay text-align-center" style="background-color:rgba(0,0,0,0.0)">
+          <h3 class="white title-has-line">Watch the Video</h3>
+          <div class="cntVid">
+            <figure class="youtube youtube-youtube">
+             <iframe width="560" height="315" src="https://www.youtube.com/embed/FEIZ2St6x2s" frameborder="0" allowfullscreen></iframe>
+           </figure>
+          </div>
+        </div>
+      </section>
+
+      <hr>
+
     </div>
   </div>
 </div>
