Completed Longboards/dime view and completely styled

--- a/src/app/longboards/longboards-board-dime/longboards-board-dime.component.html
+++ b/src/app/longboards/longboards-board-dime/longboards-board-dime.component.html
@@ -1,9 +1,105 @@
 <div id="content">
-  <div class="top-parallax" style="background-image:url('../../../../assets/products/longboards/Avalanche/AvalancheHero16.jpg')"></div>
+  <div class="top-parallax" style="background-image:url('../../../../assets/products/longboards/Revival/DimeHero16.jpg')"></div>
 
   <div id="main">
     <div class="container">
-      
+      <div class="one_half">
+        <h3 class="title">Dime</h3>
+        <p class="monospace title-has-line">Cruiser/Mini</p>
+        <div class="addthis_custom_sharing"></div>
+        <hr class="small" />
+        <p>
+          Straight from the U.S. Never Summer Mint comes the Dime. This handcrafted mini cruiser has a huge personality. Featuring composite construction, maple core, and kick tail, the 29” Dime is the perfect slash and stash deck. 
+        </p>
+        <br />
+        <div class="buyNowWrapper">
+          <ul class="buyNow">
+            <li><a href="javascript:void(0)">Buy Now</a>
+              <ul>
+                <li><a href="../company/dealers.html">Find a Dealer</a></li>
+                <li><a href="http://neversummer.shptron.com/p/2016-dime?pp=15" target="_blank">Buy Online - Complete</a></li>
+                <li><a href="http://neversummer.shptron.com/p/2016-dime-deck-only?pp=15" target="_blank">Buy Online - Deck Only</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="one_half last">
+        <hr class="small" />
+        <img src="../../../../assets/products/longboards/Revival/Dime16_2.png" />
+      </div>
+
+      <hr>
+
+      <section class="parallax" style="background-image: url('../../../../assets/products/longboards/longboards-4.jpg'); background-position: 50% 59px;">
+        <div class="overlay" style="background-color:rgba(255,255,255,0.0)">
+          <div class="one_half">
+            <h3 class="title-has-line">Specs</h3>
+            <table class="specstable">
+              <thead>
+                <tr>
+                  <td>Length</td>
+                  <td>Width</td>
+                  <td>Adjustable Wheel Base</td>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>29"</td>
+                  <td>8.25"</td>
+                  <td>15" </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+
+          <div class="one_half last" style="color:#ccc;">
+            <h3 class="title-has-line">Features</h3>
+            <ul class="spec-list">
+              <li>American Made</li>
+              <li>Composite Construction</li>
+              <li>Multi-Horizontal Maple Veneer Core Technology</li>
+              <li>Directional Tail Kick</li>
+              <li>Matte Finish</li>
+            </ul>
+            <ul class="spec-list">
+              <li><em>All weights w/grip tape and will vary with handmade boards*</em> </li>
+            </ul>
+          </div>
+          <div class="clear"></div>
+        </div>
+      </section>
+
+      <hr>
+
+       <div class="bottom-images">
+        <div class="box-img">
+          <img src="../../../../assets/products/longboards/Revival/dime2016completeview.jpg" alt="image" />
+        </div>
+        <div class="box-img">
+          <img src="../../../../assets/products/longboards/Revival/DimeView2-16.jpg" alt="image" />
+        </div>
+        <div class="box-img">
+         <img src="../../../../assets/products/longboards/Revival/DimeView3-16.jpg" alt="image" />
+        </div>
+      </div>
+
+      <hr>
+
+       <section class="parallax video-youtube" style="background-image: url('../../../../assets/products/longboards/longboards-hero.jpg');">
+        <div class="overlay text-align-center" style="background-color:rgba(0,0,0,0.0)">
+          <h3 class="white title-has-line">Watch the Video</h3>
+          <div class="cntVid">
+            <figure class="youtube youtube-youtube">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/AvymoqL9Tmw" frameborder="0" allowfullscreen></iframe>
+           </figure>
+          </div>
+        </div>
+      </section>
+
+      <hr>
+
     </div>
   </div>
 </div>
