Completed Longboards/el-jefe view and completely styled

--- a/src/app/longboards/longboards-board-el-jefe/longboards-board-el-jefe.component.html
+++ b/src/app/longboards/longboards-board-el-jefe/longboards-board-el-jefe.component.html
@@ -1,9 +1,108 @@
 <div id="content">
-  <div class="top-parallax" style="background-image:url('../../../../assets/products/longboards/Avalanche/AvalancheHero16.jpg')"></div>
+  <div class="top-parallax" style="background-image:url('../../../../assets/products/longboards/admiral/ElJefeHero16.jpg')"></div>
 
   <div id="main">
     <div class="container">
       
+      <div class="one_half">
+        <h3 class="title">El Jefe</h3>
+        <p class="monospace title-has-line">Cruiser/Carver</p>
+        <div class="addthis_custom_sharing"></div>
+        <hr class="small" />
+        <p>
+          Introducing El Capitan of carve. El Jefe locks in your feet, thanks to our ‘W’ concave, while its snappy yet powerful flex lets you arc huge carves like the boss. This is the perfect cruiser with a functional kick tail. The El Jefe brings you longboard versatility. 
+        </p>
+        <br />
+        <div class="buyNowWrapper">
+          <ul class="buyNow">
+            <li><a href="javascript:void(0)">Buy Now</a>
+              <ul>
+                <li><a href="../company/dealers.html">Find a Dealer</a></li>
+                <li><a href="http://neversummer.shptron.com/p/2016-el-jefe?pp=15" target="_blank">Buy Online - Complete</a></li>
+                <li><a href="http://neversummer.shptron.com/p/2016-el-jefe-deck-only?pp=15" target="_blank">Buy Online - Deck Only</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="one_half last">
+        <hr class="small" />
+        <img src="../../../../assets/products/longboards/admiral/ElJefe16_2.png" />
+      </div>
+
+      <hr>
+
+      <section class="parallax" style="background-image: url('../../../../assets/products/longboards/longboards-4.jpg'); background-position: 50% 59px;">
+        <div class="overlay" style="background-color:rgba(255,255,255,0.0)">
+          <div class="one_half">
+            <h3 class="title-has-line">Specs</h3>
+            <table class="specstable">
+              <thead>
+                <tr>
+                  <td>Length</td>
+                  <td>Width</td>
+                  <td>Adjustable Wheel Base</td>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>35.75"</td>
+                  <td>9.25"</td>
+                  <td>24.2" - 24.7"</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+
+          <div class="one_half last" style="color:#ccc;">
+            <h3 class="title-has-line">Features</h3>
+            <ul class="spec-list">
+              <li>American Made</li>
+              <li>Top Mount</li>
+              <li>1/2" Rocker</li>
+              <li>Directional Tail Kick</li>
+              <li>'W' Concave</li>
+              <li>Split Core Technology</li>
+              <li>Biaxial Fiberglass</li>
+              <li>Matte Finish</li>
+            </ul>
+            <ul class="spec-list">
+              <li><em>All weights w/grip tape and will vary with handmade boards*</em> </li>
+            </ul>
+          </div>
+          <div class="clear"></div>
+        </div>
+      </section>
+
+      <hr>
+
+      <div class="bottom-images">
+        <div class="box-img">
+          <img src="../../../../assets/products/longboards/admiral/ElJefeView1-16.jpg" alt="image" />
+        </div>
+        <div class="box-img">
+          <img src="../../../../assets/products/longboards/admiral/ElJefeView2-16.jpg" alt="image" />
+        </div>
+        <div class="box-img">
+         <img src="../../../../assets/products/longboards/admiral/eljefe2016completeview.jpg" alt="image" />
+        </div>
+      </div>
+
+      <hr>
+
+      <section class="parallax video-youtube" style="background-image: url('../../../../assets/products/longboards/longboards-hero.jpg');">
+        <div class="overlay text-align-center" style="background-color:rgba(0,0,0,0.0)">
+          <h3 class="white title-has-line">Watch the Video</h3>
+          <div class="cntVid">
+            <figure class="youtube youtube-youtube">
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/EyDqh21pylY" frameborder="0" allowfullscreen></iframe>
+           </figure>
+          </div>
+        </div>
+      </section>
+
+      <hr>
     </div>
   </div>
 </div>
